--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node": "^18.7.0"
+  }
 }
