--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ProjecstJS",
+  "name": "projecstjs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-     "build": "webpack"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,6 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "node": "^18.7.0"
+    "node": "^13.14.0"
   }
 }
